Added some more functionality to Device API
